Add second part of presentation

--- a/tm-devoxx-2.html
+++ b/tm-devoxx-2.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/sky.css" id="theme">
+    <link rel="stylesheet" href="css/theme/night.css" id="theme">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -42,7 +42,6 @@
         </section>
         <section>
             <h1>Devoxx 2016</h1>
-            <h3>Effective API design</h3>
             <h3>100% stateless with JWT</h3>
             <p>
                 <small>Created by <a href="http://wageurts.github.io">Dennis Geurts</a> / <a
