--- a/tm-devoxx.html
+++ b/tm-devoxx.html
@@ -43,20 +43,18 @@
         <section>
             <h1>Devoxx 2016</h1>
             <h3>Effective API design</h3>
-            <h3>100% stateless with JWT</h3>
             <p>
                 <small>Created by <a href="http://wageurts.github.io">Dennis Geurts</a> / <a
                         href="http://github.com/wageurts">Github</a></small>
             </p>
         </section>
         <section>
-            <h2>Effective service API design</h2>
-            <p>Talk by Eliotte Rusty Harold</p>
-            <p>Teamlead Google Cloud Tools</p>
+            <h2>100% stateless with JWT</h2>
+            <p>Talk by Hubert Sablonnière</p>
         </section>
         <section>
             <section>
-                <h2>What is an API?</h2>
+                <h2>JSON web tokens</h2>
             </section>
             <section>
                 <h2>Where are we using API's?</h2>
@@ -65,73 +63,7 @@
                 <h2>Local vs. remote API?</h2>
             </section>
         </section>
-        <section>
-            <section>
-                <h2>What do we see in the business?</h2>
-            </section>
-            <section>
-                <h2>Transportation</h2>
-                <h2 class="fragment">HTTP/HTTP<b>S</b></h2>
-            </section>
-            <section>
-                <h2>Request</h2>
-                <h2 class="fragment">URL or JSON/XML</h2>
-            </section>
-            <section>
-                <h2>Response</h2>
-                <h2 class="fragment">JSON, XML or </h2>
-                <h2 class="fragment">some binairy format</h2>
-                <h2 class="fragment">PDF, JPG,....</h2>
-            </section>
-        </section>
-        <section>
-            <section>
-                <h2>START WITH API DOCUMENTATION</h2>
-            </section>
-            <section>
-                <ul>
-                    <li>How is your API going to look like</li>
-                    <li>URL, query strings, request format <br/>response format</li>
-                    <li>Assemble example requests and responses</li>
-                    <li>Create use cases</li>
-                </ul>
-            </section>
-        </section>
-        <section>
-            <section class="fragmented">
-                <h2>First MVP</h2>
-                <P></P>
-                <h2 class="fragment">Start small and grow.</h2>
-            </section>
-            <section>
-                <h2>Read-only first</h2>
-            </section>
-            <section class="fragmented">
-                <h1>YAGNI</h1>
-                <h2 class="fragment">You aint gonna need it!</h2>
-            </section>
-            <section class="fragmented">
-                <h2>Easier to add something</h2>
-                <h2>then to delete a part of the interface.</h2>
-            </section>
-        </section>
 
-        <section>
-            <p>Use the standard verbs</p>
-            <p>Make sure the service is idempotent</p>
-            <p>Use nouns not actions</p>
-            <p>No single URL</p>
-        </section>
-
-        <section>
-            <p>Use standards!</p>
-            <p>Date: use ISO standards</p>
-            <p>ISO 8601</p>
-        </section>
-
-        <section>
-            <p>Client Lib</p>
-        </section>
 
         <section class="concave">
             <h1>THE END</h1>
