--- a/tm-devoxx-2.html
+++ b/tm-devoxx-2.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/night.css" id="theme">
+    <link rel="stylesheet" href="css/theme/black.css" id="theme">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -42,16 +42,13 @@
         </section>
         <section>
             <h1>Devoxx 2016</h1>
-            <h3>100% stateless with JWT</h3>
+            <h3>Effective service API design</h3>
+            <p>Talk by Eliotte Rusty Harold</p>
+            <p>Teamlead Google Cloud Tools</p>
             <p>
                 <small>Created by <a href="http://wageurts.github.io">Dennis Geurts</a> / <a
                         href="http://github.com/wageurts">Github</a></small>
             </p>
-        </section>
-        <section>
-            <h2>Effective service API design</h2>
-            <p>Talk by Eliotte Rusty Harold</p>
-            <p>Teamlead Google Cloud Tools</p>
         </section>
         <section>
             <section>
@@ -151,6 +148,15 @@
         history: true,
         center: true,
         hideAddressBar: true,
+        width: 1200,
+        height: 800,
+
+        // Factor of the display size that should remain empty around the content
+        margin: 0.1,
+
+        // Bounds for smallest/largest possible scale to apply to content
+        minScale: 0.2,
+        maxScale: 1.5,
         transition: 'slide', // none/fade/slide/convex/concave/zoom
 
         // More info https://github.com/hakimel/reveal.js#dependencies
