Add video as intro

--- a/tm-devoxx-2.html
+++ b/tm-devoxx-2.html
@@ -38,6 +38,11 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
         <section>
+            <video autoplay>
+                <source src="video/intro-devoxx-2016.mp4" type="video/mp4">
+            </video>
+        </section>
+        <section>
             <img src="img/DevoxxBelgium2017.jpg"/>
         </section>
         <section>
